# mychem-code

./: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  INSTALL.rst  NEWS  README.md  README.rst  THANKS  TODO  Ubuntu 14.04 Installation notes  Ubuntu 16.04 installation notes  codemeta.json  mychem.json
.github/workflows/: cmake-multi-platform.yml
cmake/modules/: FindMySQL.cmake  FindOpenBabel.cmake  FindOpenBabel2.cmake  FindOpenBabel3.cmake  MacroEnsureVersion.cmake
include/: CMakeLists.txt
include/mychem/: CMakeLists.txt  config.h.cmake  dlhandler.h  serialization.h  structures.h
scripts/: mychemdb-manager.py  mychemdb_manager
src/: CMakeLists.txt  conversion.c  conversion.h  conversion_wrapper.cpp  conversion_wrapper.h  dlhandler_unix.cpp  dlhandler_win32.cpp  helper.c  helper.h  helper_wrapper.cpp  helper_wrapper.h  modification.c  modification.h  modification_wrapper.cpp  modification_wrapper.h  molmatch.c  molmatch.h  molmatch_wrapper.cpp  molmatch_wrapper.h  mychem.def  mychemdb.sql  mychemdb_macosx.sql  mychemdb_win32.sql  property.c  property.h  property_wrapper.cpp  property_wrapper.h  serialization.cpp
tests/: CMakeLists.txt  conversion_test.cpp  helper_test.cpp  modification_test.cpp  molmatch_test.cpp  mysql_handler.cpp  mysql_handler.h  property_test.cpp  test_functions.cpp  test_functions.h
tests/data/: 1CRN.molecule  1H-indole.mol  1H-indole.molecule  1H-indole.smi  L-tryptophan.can  L-tryptophan.mol  L-tryptophan.molecule  glycine.V3000  glycine.cml  glycine.inchi  glycine.inchi102  glycine.mol  glycine.mol2  glycine.molecule  glycine.smi  glycine_sodium_salt.mol  glycine_wo_sodium.mol  hydrogenated_glycine.mol
